--- a/src/app/main/pages/authentication/reset-password/reset-password.component.html
+++ b/src/app/main/pages/authentication/reset-password/reset-password.component.html
@@ -55,7 +55,7 @@
 
 
         <div *ngIf="passwordReset"  fxLayout="column" fxLayoutAlign="center center">
-                <div class="title">CONTRASEÑA CAMBIADA!</div>
+                <div class="title">CONTRASEÑA ACTUALIZADA!</div>
                 <a class="link" [routerLink]="'/pages/auth/login'">Volver a ingresar</a>
             </div>
    
