--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -108,27 +108,36 @@
         </mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="phone">
+        <mat-header-cell *matHeaderCellDef fxHide fxShow.gt-sm>Teléfono</mat-header-cell>
+        <mat-cell *matCellDef="let contact" fxHide fxShow.gt-sm>
+            <p class="phone text-truncate">
+                {{contact.phone}}
+            </p>
+        </mat-cell>
+    </ng-container>
+
 
     <ng-container matColumnDef="contact">
-        <mat-header-cell *matHeaderCellDef >Contactado</mat-header-cell>
-        <mat-cell *matCellDef="let contact"  >
-            <mat-icon *ngIf="contact.contactado === 'phone' " class="active-icon green-600 s-16">phone</mat-icon>
-            <mat-icon *ngIf="contact.contactado === 'web' " class="active-icon green-500 s-16">mail</mat-icon>
+        <mat-header-cell *matHeaderCellDef fxFlex="80px">Contactado</mat-header-cell>
+        <mat-cell *matCellDef="let contact"  fxFlex="70px">
+            <mat-icon *ngIf="contact.contactado === 'phone' " class="active-icon green-600 s-20">phone</mat-icon>
+            <mat-icon *ngIf="contact.contactado === 'email' " class="active-icon green-500 s-20">alternate_email</mat-icon>
 
-            <mat-icon *ngIf="contact.contactado === 'null' " class="active-icon blue-500 s-16">pause_circle_outline</mat-icon>
+            <mat-icon *ngIf="contact.contactado === 'null' " class="active-icon blue-500 s-20">pause_circle_outline</mat-icon>
 
             
         </mat-cell>
     </ng-container>
 
     <!-- Phone Column -->
-    <ng-container matColumnDef="asiste">
-        <mat-header-cell *matHeaderCellDef >Asiste</mat-header-cell>
-        <mat-cell *matCellDef="let contact"  >
-            <mat-icon *ngIf="contact.asiste === 'si' " class="active-icon green-600 s-16">check</mat-icon>
-            <mat-icon *ngIf="contact.asiste === 'no' " class="active-icon red-500 s-16">close</mat-icon>
+    <ng-container matColumnDef="asiste" >
+        <mat-header-cell *matHeaderCellDef fxFlex="80px" >Asiste</mat-header-cell>
+        <mat-cell *matCellDef="let contact"  fxFlex="70px">
+            <mat-icon *ngIf="contact.asiste === 'si' " class="active-icon green-600 s-20">check</mat-icon>
+            <mat-icon *ngIf="contact.asiste === 'no' " class="active-icon red-500 s-20">close</mat-icon>
 
-            <mat-icon *ngIf="contact.asiste === 'null' " class="active-icon blue-500 s-16">pause_circle_outline</mat-icon>
+            <mat-icon *ngIf="contact.asiste === 'null' " class="active-icon blue-500 s-20">pause_circle_outline</mat-icon>
 
             
         </mat-cell>
