--- a/src/app/main/apps/dashboards/analytics/analytics.component.scss
+++ b/src/app/main/apps/dashboards/analytics/analytics.component.scss
@@ -52,7 +52,20 @@
                     max-width: none;
                 }
             }
+
+
         }
     }
+
+}
+
+.card-container {
+
+    padding: 24px !important;
+    margin-bottom: 20px !important;
+}
+
+.fuse-card {
+    max-width: 500px !important;
 
 }
