ajustes para misa

--- a/src/app/main/pages/errors/404/error-404.component.html
+++ b/src/app/main/pages/errors/404/error-404.component.html
@@ -2,9 +2,9 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="message">Se ha indicado de su ausencia al evento.</div>
+        <div class="message">Se ha indicado de su ausencia a la Misa.</div>
         <div class="message">Muchas gracias.</div>
-        <a class="report-link" href="http://www.turevento.net/">turEvento.net</a> 
+        <!-- <a class="report-link" href="http://www.turevento.net/">turEvento.net</a> -->
 
     </div>
 
