fields nuew, edit campaign messages in confirm or cancel invitation

--- a/src/app/main/apps/dashboards/analytics/analytics.component.html
+++ b/src/app/main/apps/dashboards/analytics/analytics.component.html
@@ -10,7 +10,7 @@
         <div fxLayout="row" fxLayoutAlign="space-between start">
 
             <span class="h1 my-0 my-sm-24 welcome-message"
-                  [@animate]="{value:'*',params:{x:'50px'}}">Asistencia por evento
+                  [@animate]="{value:'*',params:{x:'50px'}}">Resumen de eventos
             </span>
 
         </div>
