--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
@@ -73,12 +73,12 @@
                                         </button>
 
                                         <mat-menu #card19Menu="matMenu">
-                                            <!--
-                                        <button mat-menu-item (click)="openEditor(c)" >
+                                        
+                                        <button mat-menu-item (click)="editCampaign(c)" >
                                             <mat-icon>edit</mat-icon>
                                             <span>Editar</span>
                                         </button>
-                                        -->
+                                    
 
                                             <button mat-menu-item (click)="deleteCampaign(c)">
                                                 <mat-icon>delete</mat-icon>
