--- a/src/app/main/pages/errors/404/error-404.component.html
+++ b/src/app/main/pages/errors/404/error-404.component.html
@@ -2,7 +2,7 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="message">Se ha indicado de su ausencia a la Misa.</div>
+        <div class="message">{{ confirmInvitationService.campaignInvitation.messageCancel }}</div>
         <div class="message">Muchas gracias.</div>
         <!-- <a class="report-link" href="http://www.turevento.net/">turEvento.net</a> -->
 
