--- a/src/app/main/pages/errors/500/error-500.component.html
+++ b/src/app/main/pages/errors/500/error-500.component.html
@@ -4,10 +4,10 @@
 
         <!-- <div class="name-campaign"> {{ confirmInvitationService.campaignInvitation.affair }} </div> -->
         <div class="name-campaign">
-            Misa Aniversario Voto Nacional O'Higgins<br>
+            {{  confirmInvitationService.campaignInvitation.affair }}<br>
             Sábado 14 de Marzo a las 12:30 hrs<br>
             Catedral Metropolina.</div>
-        <div class="message">Se ha completado exitosamente su proceso de registro.</div>
+        <div class="message">{{  confirmInvitationService.campaignInvitation.messageConfirm }}</div>
         <div class="message">Muchas gracias.</div>
         <!-- <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>-->
 
